--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -37,10 +37,6 @@ jobs:
       - name: Internal build
         run: npm run build
         working-directory: .
-      - name: Workaround for Elm failures
-        run: echo "../tests/bad-bin" >> "$GITHUB_PATH"
-      - run: cat "$GITHUB_PATH"
-      - run: echo "$PATH"
 
       - name: Cache node_modules
         id: cache-node_modules
@@ -64,7 +60,7 @@ jobs:
 
       - run: npx elm-tooling install
 
-      - run: npx elm-watch make --optimize
+      - run: PATH="../tests/bad-bin:./node_modules/.bin:$PATH" elm-watch make --optimize
 
       - run: npm run esbuild -- --minify
 
